--- a/getting-started/troubleshooting-validation/common-issues.mdx
+++ b/getting-started/troubleshooting-validation/common-issues.mdx
@@ -1,237 +1,167 @@
 ---
 title: "Troubleshooting Common Issues"
-description: "Identify and resolve the most common setup and compilation problems encountered during initial integration. Includes tips for resolving dependency issues, path problems, and common build errors."
+description: "Collects actionable solutions for the most frequent problems: build errors, linker issues, missing headers, and runtime test failures. Steers users toward quick resolution instead of deep debugging."
 ---
 
 # Troubleshooting Common Issues
 
-This guide helps you identify and resolve the most frequent problems encountered during initial setup and integration of GoogleTest and GoogleMock. Whether you face build failures, linking errors, unexpected test behavior, or warning messages, this document provides practical insights and best practices to get you back on track swiftly.
+This guide helps you quickly identify and resolve the most frequent problems encountered when building, linking, or running tests with GoogleTest and GoogleMock. Designed to steer you toward efficient solutions, it focuses on practical fixes rather than deep debugging techniques.
 
 ---
 
-## 1. Common Build and Linking Issues
+## 1. Build Errors
 
-### 1.1 Missing or Incorrect Dependencies
+### Common Causes:
+- Missing or incorrect include paths for GoogleTest and GoogleMock headers.
+- Incomplete or incorrect linkage between test binaries and GoogleTest/GoogleMock libraries.
+- Using an unsupported or mismatched compiler version.
 
-GoogleTest and GoogleMock depend on C++17 support and the proper inclusion of their headers and libraries.
+### Step-by-Step Resolution:
 
-- **Problem:** Compilation fails due to missing headers like `<gtest/gtest.h>` or `<gmock/gmock.h>`.
+1. **Verify Include Paths**
+   - Ensure your build system includes the directory containing `gtest/gtest.h` and `gmock/gmock.h`.
+   - For example, in CMake, add:
+     ```cmake
+     include_directories(${gtest_SOURCE_DIR}/include ${gmock_SOURCE_DIR}/include)
+     ```
 
-  **Solution:**
+2. **Link Proper Libraries**
+   - Link against the correct GoogleTest and GoogleMock libraries such as `gtest`, `gtest_main`, `gmock`, and `gmock_main`.
+   - Example CMake linkage:
+     ```cmake
+     target_link_libraries(your_test_target gtest gtest_main gmock gmock_main)
+     ```
 
-  - Verify that the GoogleTest source or installed package is correctly referenced in your build system (CMake, Bazel, or manual).
-  - Ensure include paths to GoogleTest and GoogleMock headers are accurate.
-  - For manual integration, confirm that you have the `googletest` clone or release files and that your compiler supports C++17.
+3. **Check Compiler Compatibility**
+   - Confirm your compiler is supported: GCC 7.0+, MSVC 2015+, or Clang.
+   - Confirm you are compiling with C++17 enabled.
 
-- **Problem:** Linking errors such as unresolved symbols from gtest or gmock.
+### Practical Tips:
+- Wrap template parameters or argument types with unprotected commas in parentheses when mocking methods to avoid parse errors.
+- If your build system is Bazel or CMake, consult the respective installation page to ensure workspace and dependencies are declared correctly.
 
-  **Solution:**
-
-  - Confirm that your linker includes the GoogleTest and GoogleMock static or shared libraries.
-  - If using CMake, link your test targets with `gtest` and `gmock` libraries explicitly.
-  - For Bazel, ensure your BUILD files include the proper `deps` on GoogleTest.
-  - Verify architecture compatibility—i.e., no mixing of 32-bit and 64-bit binaries.
-
-### 1.2 Compiler Compatibility
-
-- GoogleTest requires C++17 or later.
-- Supported compilers include recent versions of GCC, Clang, and MSVC.
-
-**Tip:** Run `g++ --version` or `clang++ --version` to check your compiler, and check the C++ standard flags used in your build (`-std=c++17`).
-
-### 1.3 Dealing with Overloaded Methods in Mocks
-
-- When mocking overloaded functions, explicitly specify the signature in `MOCK_METHOD` to avoid ambiguity.
-- Use `using Base::Method;` to bring hidden base-class overloads into scope.
-
+<Accordion title="Example of a MOCK_METHOD with complex types">
 ```cpp
-class MockFoo : public Foo {
+class MockFoo {
  public:
-   using Foo::Add;  // Bring base class overloads
-   MOCK_METHOD(int, Add, (Element x), (override));
+  // Wrap return type with parentheses if it contains commas.
+  MOCK_METHOD((std::pair<bool, int>), GetPair, ());
 };
 ```
+</Accordion>
 
-### 1.4 Resolving Virtual Destructor Warnings
+---
 
-- Always ensure the class you mock has a virtual destructor. Without it, mocking can cause heapcheck failures or leaks.
+## 2. Linker Issues
+
+### Common Causes:
+- Undefined references to GoogleTest or GoogleMock symbols.
+- Forgetting to link the main function provider (`gtest_main` or `gmock_main`) if using default main.
+- Mixing static and shared libraries inconsistently.
+
+### Remediation Steps:
+
+1. **Include `gtest_main` or Your Own `main()`**
+   - If you rely on GoogleTest’s `gtest_main` library to provide `main()`, link it explicitly.
+   - Alternatively, write your own `main()` and link only `gtest` and `gmock` libraries.
+
+2. **Match Library and Compiler Types**
+   - Ensure that your test binary and GoogleTest/GoogleMock libraries are built with the same compiler and settings.
+
+3. **Order of Libraries**
+   - Place GoogleTest and GoogleMock libraries **after** your source files in the compiler/linker command to satisfy symbol dependencies.
+
+---
+
+## 3. Missing Headers
+
+### Causes:
+- Include paths not set correctly for GoogleTest/GoogleMock headers.
+- Incorrect or incomplete installation of GoogleTest/GoogleMock.
+
+### Quick Fix:
+- Verify your include directories point to the root of the `googletest/include` folder.
+- Double-check installed subfolders; headers should be accessible at:
+  - `gtest/gtest.h`
+  - `gmock/gmock.h`
+
+
+---
+
+## 4. Runtime Test Failures
+
+### Symptoms:
+- Tests report failed assertions.
+- Unexpected call errors or warnings about "Uninteresting mock function call".
+- Test crashes or leaks.
+
+### Immediate Actions:
+
+1. **Interpret Assertion Failures**
+   - Review test output logs; GoogleTest provides file names, line numbers, and detailed error messages.
+   - Use `--gtest_filter` to run specific failing tests for targeted debugging.
+
+2. **Address Unexpected Calls**
+   - Unexpected calls may indicate missing or incorrect `EXPECT_CALL` in mocks.
+   - Use `EXPECT_CALL(mock, Method(...)).Times(0);` to explicitly forbid calls.
+   - Suppress warnings for uninteresting calls with `NiceMock<T>` or carefully use `ON_CALL` to define default actions.
+
+3. **Use Verbose Logging for Diagnostics**
+   - Run your tests with the flag `--gmock_verbose=info` to log all mock interactions.
+   - This reveals which calls matched which expectations and which failed.
+
+4. **Common Pitfalls**
+   - Expectations are not sticky by default; use `.RetiresOnSaturation()` if you want expectations to become inactive after being satisfied.
+   - Be cautious when over-specifying calls – too strict `EXPECT_CALL` can lead to brittle tests.
+
+<Accordion title="Suppress 'Uninteresting mock function call' warnings">
+Use `NiceMock` to silence warnings when you don't care about some calls:
 
 ```cpp
-class Base {
- public:
-   virtual ~Base() {}  // Must be virtual
-   ...
-};
+using ::testing::NiceMock;
+NiceMock<MockFoo> mock;
+// Now, uninteresting calls don't produce warnings.
 ```
-
-### 1.5 Mocking Methods with Commas in Types
-
-- Wrap return or argument types containing commas in additional parentheses or create type aliases.
-
-```cpp
-// Problematic
-MOCK_METHOD(std::pair<int, bool>, GetPair, ()); // Won't compile
-
-// Solution 1
-MOCK_METHOD((std::pair<int, bool>), GetPair, ());
-
-// Solution 2
-using PairType = std::pair<int, bool>;
-MOCK_METHOD(PairType, GetPair, ());
-```
-
----
-
-## 2. Understanding gMock Warnings and Failures
-
-### 2.1 Uninteresting Mock Function Calls
-
-If a mock function is called without an `EXPECT_CALL` specifying that call, gMock prints a warning:
-
-```text
-GMOCK WARNING: Uninteresting mock function call - returning default value.
-```
-
-- This is normal if you haven't set expectations for every call.
-- Use `NiceMock<MockClass>` to suppress these warnings when uninteresting calls are expected.
-- Alternatively, add an `EXPECT_CALL(mock, Method(_)).Times(AnyNumber())` to explicitly allow calls.
-
-### 2.2 Unexpected Calls
-
-An unexpected call occurs when a function is called that doesn't match any existing expectation.
-
-```text
-Unexpected mock function call - returning default value.
-```
-
-- This always indicates a test failure.
-- Ensure all expected calls have matching `EXPECT_CALL` statements with appropriate matchers.
-- Use `--gmock_verbose=info` to see detailed traces aiding diagnosis.
-
-### 2.3 Excessive Calls
-
-Calling a mock function more times than specified in the `Times()` clause leads to errors.
-
-- Adjust the `Times()` cardinality.
-- Consider using `.RetiresOnSaturation()` if needed (makes expectations retire after saturation).
-
-```cpp
-EXPECT_CALL(mock, Func()).Times(2).RetiresOnSaturation();
-```
-
-### 2.4 Unsatisfied Expectations
-
-Tests fail when an expected call is never invoked:
-
-```text
-Actual function call count doesn't match EXPECT_CALL(...)
-Expected: to be called once
-Actual: never called
-```
-
-- Verify your test covers all expected calls.
-- Use debugging output (`--gmock_verbose=info`) to understand call flow.
-
-### 2.5 Common Causes of Failures
-
-- Arguments mismatch — check your matchers.
-- Order of expectations when sequences or `After()` clauses are used.
-- Retired expectations no longer match calls, ensure careful use of `RetiresOnSaturation()`.
-
----
-
-## 3. Debugging and Diagnostic Tips
-
-### 3.1 Enable Verbose Logging
-
-Run tests with `--gmock_verbose=info` to get rich logs explaining which expectations match or fail each call. This often reveals subtle problems.
-
-### 3.2 Stack Traces in Failures
-
-GMock prints stack traces with warnings/failures, pointing to source lines where expectations are declared. Use these to trace issues quickly.
-
-### 3.3 Checking for Leaked Mocks
-
-Leaked mock objects (never deleted) cause final verification failures:
-
-```text
-ERROR: this mock object should be deleted but never is.
-```
-
-- Make sure all mocks you create on the heap are properly deleted.
-- If intentionally leaking, use `Mock::AllowLeak(&mock_obj);`.
-
-### 3.4 Use `Mock::VerifyAndClearExpectations()`
-
-Explicitly verify and clear expectations if mocks live longer or are managed by external code.
-
-```cpp
-ASSERT_TRUE(Mock::VerifyAndClearExpectations(&mock_obj));
-```
-
-### 3.5 Avoid Setting Expectations After Calls
-
-Always set expectations before exercising the code under test. Setting expectations afterward leads to undefined behavior.
-
----
-
-## 4. Best Practices to Avoid Common Pitfalls
-
-- Use `ON_CALL` to set default behavior and `EXPECT_CALL` only for calls you want to verify.
-- For methods expected to be called any number of times, use `.Times(AnyNumber())` explicitly.
-- Use sequences (`InSequence`) or `After()` to enforce call order when it matters.
-- Use `NiceMock` or `StrictMock` to control how uninteresting calls are handled.
-- When mocking methods accepting move-only types (e.g., `std::unique_ptr`), define mocks normally and use lambdas in actions.
-
-```cpp
-EXPECT_CALL(mock, Method(_))
-  .WillRepeatedly([](std::unique_ptr<Foo> ptr) { ... });
-```
-
-- Avoid mocking concrete classes; prefer interfaces for easier maintainability.
-
----
-
-## 5. Troubleshooting Quick Reference
-
-<AccordionGroup title="Common Issues & Solutions">
-<Accordion title="Compilation Errors Related to gMock Headers">
-- Check include paths.
-- Confirm GoogleTest source or installation.
-- Ensure using the correct C++ standard flag (`-std=c++17`).
 </Accordion>
-<Accordion title="Linker Errors Unresolved Symbols">
-- Link to `gtest` and `gmock` libraries.
-- Ensure consistent build architecture.
-- For manual builds, add `-lgtest -lgmock` (or equivalent).
-</Accordion>
-<Accordion title="Unexpected Mock Calls at Runtime">
-- Confirm all expected calls are covered by `EXPECT_CALL`.
-- Use `--gmock_verbose=info` to inspect mock call logs.
-- Check that arguments match the matchers specified.
-</Accordion>
-<Accordion title="Uninteresting Calls Warning">
-- Suppress with `NiceMock<MockClass>`.
-- Add catchall `EXPECT_CALL(mock, Method(_)).Times(AnyNumber())` if calls are expected but not verified.
-</Accordion>
-<Accordion title="Memory Leak Errors on Mocks">
-- Delete mock objects to trigger expectation verification.
-- Use heap checkers to find leaks.
-- Use `Mock::AllowLeak(mock_obj);` if intentional.
-</Accordion>
-</AccordionGroup>
 
 ---
 
-## 6. Additional Resources
+## 5. Common Troubleshooting Tips
 
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) for advanced recipes.
-- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html) for all mock APIs.
-- [gMock FAQ](https://google.github.io/googletest/gmock_faq.html) for common questions.
-- [Using GoogleMock Guide](https://google.github.io/googletest/gmock_for_dummies.html) for learning basics.
-- [Matchers Reference](https://google.github.io/googletest/reference/matchers.html) for argument matchers.
-- [Running Tests & Understanding Output](../getting-started/first-steps-with-tests/running-tests.md) for insights on interpreting logs.
+- **Verify Virtual Destructors:** Ensure interfaces you're mocking have virtual destructors to avoid memory leaks.
+
+- **Mock Methods Should Be Public:** Place all `MOCK_METHOD` declarations in the `public:` section, even when mocking protected or private base class methods.
+
+- **Use Aliases for Complex Types:** To avoid errors from unprotected commas in `MOCK_METHOD` parameters, use `using` aliases.
+
+- **Set Expectations Before Exercise:** Call `EXPECT_CALL` **before** exercising the mock; setting expectations after use leads to undefined behavior.
+
+- **Use Sequences for Ordered Calls:** If order matters, group expectations in an `InSequence` block.
+
 
 ---
 
-By following this guide, you can quickly identify root causes of setup and test failures, enhance test stability, and leverage GoogleTest and GoogleMock features effectively to build robust C++ test suites.
+## 6. When You Are Stuck
+
+- Consult the verbose mock call logs with `--gmock_verbose=info` and `--gtest_stack_trace_depth` to your desired depth.
+
+- Check [GoogleMock FAQ](https://github.com/google/googletest/blob/main/docs/gmock_faq.md) for common questions.
+
+- Use heap checkers to detect leaks related to mock destruction.
+
+- Verify that your environment meets the [System Requirements](https://github.com/google/googletest/blob/main/getting-started/prerequisites-installation/system-requirements.md).
+
+---
+
+## 7. Additional Resources
+
+- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html): Recipes covering mock creation, actions, and expectations.
+- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md): Getting started with test writing.
+- [Configuring Your Project](https://github.com/google/googletest/blob/main/getting-started/configuration-first-run/configure-project.md): Guidance on setting up your project.
+
+---
+
+## Summary
+This page delivers actionable solutions for the most frequent build, linking, header, and runtime issues with GoogleTest and GoogleMock, emphasizing quick remediation over deep debugging.
+
+---
