--- a/getting-started/troubleshooting-validation/validate-setup.mdx
+++ b/getting-started/troubleshooting-validation/validate-setup.mdx
@@ -1,182 +1,206 @@
 ---
-title: "Quick Validation Steps"
-description: "Provides a concise checklist and steps to confirm your GoogleTest/GoogleMock setup works. Includes example invocations, expected outputs, and guidance on interpreting results to quickly surface misconfigurations."
+title: "Validating Your Setup"
+description: "Shows users how to ensure GoogleTest and GoogleMock are integrated correctly: checking include paths, linking, running test binaries, and reading output. Helps confirm system readiness before writing real tests."
 ---
 
-# Quick Validation Steps for Your GoogleTest/GoogleMock Setup
+# Validating Your Setup
 
-This page guides you through essential checks to confirm that your GoogleTest and GoogleMock setup works correctly. It provides practical example invocations, outlines expected outputs, and helps you interpret results to quickly identify and resolve common misconfigurations.
+Ensuring that your GoogleTest and GoogleMock integration is correctly configured is critical before you start writing real tests. This guide walks you through verifying include paths, linking the necessary libraries, running your test binaries, and interpreting their output so you can confidently proceed.
 
 ---
 
-## 1. Why Validate Your Setup?
+## 1. Verify Include Paths
 
-Before writing extensive tests, it's critical to verify that GoogleTest and GoogleMock are correctly installed, configured, and operational in your environment. Quick validation steps help catch configuration or build errors early, ensuring your development efforts build on a reliable foundation.
+### Step 1: Confirm Header Access
 
-## 2. Prerequisites
+Add the following to a simple source file where you intend to write tests:
 
-- You must have successfully installed GoogleTest and GoogleMock, following your platform-specific instructions (e.g., via CMake or Bazel).
-- Your test executable must be compiled and linked against GoogleTest and GoogleMock libraries.
-- Have access to your build system's command line to run the test binaries.
-
-If you haven't installed yet, please refer to [Installation with CMake](../../getting-started/prerequisites-installation/installation-cmake) or [Installation with Bazel](../../getting-started/prerequisites-installation/installation-bazel) guides.
-
-## 3. Running the Quick Setup Verification Tests
-
-GoogleTest includes supplied tests to confirm your setup behaves as expected, notably tests that validate `SetUpTestSuite()` and `TearDownTestSuite()` lifecycle behavior.
-
-### 3.1. Locate Test Executable
-
-After building GoogleTest, find the `googletest-setuptestsuite-test_` executable, typically under the `googletest/test/` directory or your build output folder.
-
-### 3.2. Run the Test Executable
-
-Execute the test binary:
-
-```bash
-./googletest-setuptestsuite-test_
+```cpp
+#include <gtest/gtest.h>
+#include <gmock/gmock.h>
 ```
 
-### 3.3. Expected Output
+Attempt to compile this file. If the compiler fails to find these headers, review your build or IDE include path settings to ensure they point to the GoogleTest and GoogleMock include directories.
 
-You should see output indicating test failures on specific test suites named `SetupFailTest` and `TearDownFailTest`. Example snippet:
+### Common Pitfalls
 
-```none
-[  FAILED  ] SetupFailTest: SetUpTestSuite or TearDownTestSuite
-[  FAILED  ] TearDownFailTest: SetUpTestSuite or TearDownTestSuite
-
-  2 FAILED TEST SUITES
-```
-
-These failures are intentional and confirm that GoogleTest properly reports failures in test suite setup and teardown phases.
+- Mixing system-wide installation and local builds can cause confusion on header locations.
+- Using incorrect case or spelling for include directives.
+- Not installing or updating GoogleTest and GoogleMock submodules when building from source.
 
 <Tip>
-If you do not see these failures or the output differs significantly, it may indicate your GoogleTest build or runtime environment has issues that need addressing.
+Make sure your build system includes the `googletest/include` directory for both GoogleTest and GoogleMock headers.
 </Tip>
 
-## 4. Interpreting Results and Common Issues
+---
 
-| Symptom                     | Explanation                                                        | Action/Evernote                                                   |
-|-----------------------------|------------------------------------------------------------------|------------------------------------------------------------------|
-| No test executable found     | GoogleTest was not built or built output path unknown             | Verify build success and locate test binaries per your build system guidelines |
-| Test runs with no failures    | Setup/teardown test may be missing or not linked                   | Check that the test sources are included and linked. Alternatively, write your own validation test as described below |
-| Test binary crashes or hangs | Build or environment misconfiguration, missing dependencies       | Ensure linked libraries match your compiler and platform; check for runtime environment issues |
+## 2. Verify Linking
 
-## 5. Writing Your Own Minimal Validation Test
+GoogleTest and GoogleMock require linking with one or more libraries as part of your build process. Common libraries to link include `gtest`, `gtest_main`, `gmock`, and `gmock_main`.
 
-If for any reason the supplied test is unavailable, you can create a simple test source to verify GoogleTest correctly runs tests and reports setup failures.
+### Step 1: Compile a Minimal Test
 
-Example test file `simple-validation-test.cc`:
+Write a minimal test source file, for instance `sample_test.cc`:
 
-```c++
+```cpp
 #include <gtest/gtest.h>
+#include <gmock/gmock.h>
 
-class FailSetupTest : public ::testing::Test {
- protected:
-  static void SetUpTestSuite() {
-    ASSERT_EQ(1, 2) << "Intentional setup failure";
-  }
-};
-
-TEST_F(FailSetupTest, DummyTest) {
-  SUCCEED();  // This test will not run because setup fails.
+TEST(SampleTest, BasicAssertions) {
+  EXPECT_EQ(1, 1);
 }
 
 int main(int argc, char** argv) {
-  testing::InitGoogleTest(&argc, argv);
+  ::testing::InitGoogleMock(&argc, argv);
   return RUN_ALL_TESTS();
 }
 ```
 
-### Build and Run
+### Step 2: Compile and Link
 
-Compile with:
+Using your build tool (or manually, e.g., with `g++`), compile and link this file with the necessary GoogleTest and GoogleMock libraries.
 
-```bash
-# Example with g++ and pkg-config for GoogleTest
-g++ -std=c++17 simple-validation-test.cc -o simple-validation-test $(pkg-config --cflags --libs gtest_main) -pthread
-```
-
-Run the test:
+For example, a typical command might look like:
 
 ```bash
-./simple-validation-test
+g++ -std=c++17 sample_test.cc -lgtest -lgmock -lpthread -o sample_test
 ```
 
-Expected to see a failure caused by `SetUpTestSuite()` asserting false.
+> **Note:** Depending on your system and installation, you might need to link with `gtest_main` or `gmock_main` instead of providing your own `main()`.
+
+### Step 3: Run the Executable
+
+Run the resulting executable:
+
+```bash
+./sample_test
+```
+
+You should see a summary output indicating the tests ran and passed.
 
 <Tip>
-Use this minimal validation when debugging your GoogleTest integration or verifying environment correctness.
+When using CMake or Bazel, ensure your `CMakeLists.txt` or `BUILD` files link the target against the correct GoogleTest/GoogleMock targets.
 </Tip>
 
-## 6. Understanding Test Output Details
+---
 
-GoogleTest summarizes test execution in a human-readable format showing:
+## 3. Understanding Test Output
 
-- Total tests run, passed, failed, or skipped.
-- Detailed messages for failures including file, line number, and failure reason.
-- Stack traces if enabled.
+### Sample Successful Output
 
-Review the console for the following markers:
+When your test runs correctly, you will see output similar to:
 
-- `[  PASSED  ]` indicates successful tests.
-- `[  FAILED  ]` indicates failed tests.
-- `[  SKIPPED ]` indicates tests skipped intentionally (e.g., via `GTEST_SKIP()`).
+```shell
+[==========] Running 1 test from 1 test case.
+[----------] Global test environment set-up.
+[----------] 1 test from SampleTest
+[ RUN      ] SampleTest.BasicAssertions
+[       OK ] SampleTest.BasicAssertions (0 ms)
+[----------] 1 test from SampleTest ran. (0 ms total)
+[----------] Global test environment tear-down
+[==========] 1 test from 1 test case ran. (0 ms total)
+[  PASSED  ] 1 test.
+```
 
-Failures in `SetUpTestSuite()` or `TearDownTestSuite()` will be reported with clear markers specifying the test suite name.
+This means GoogleMock and GoogleTest are correctly integrated and functional.
 
-## 7. Tips for Reliable Validation
+### Sample Failure Output
 
-- Ensure that test names' suites and fixtures follow GoogleTest naming restrictions (avoid underscores in test suite and test names) to prevent runtime issues.
-- Always call `testing::InitGoogleTest()` before `RUN_ALL_TESTS()` in your test executable's `main()`.
-- Use `ASSERT_*` in `SetUpTestSuite()` and `TearDownTestSuite()` to catch setup errors.
-- Keep your GoogleTest libraries and header files in sync, especially when upgrading versions.
+If there's an error, for example in linking or initialization, you might see:
 
-## 8. Troubleshooting Common Issues
+- Header not found errors during compilation.
+- Linking errors complaining about undefined references.
+- Runtime errors indicating failure to initialize GoogleMock.
 
-<AccordionGroup title="Troubleshooting Tips">
-<Accordion title="Test Executable Runs but No Tests Execute">
-Make sure your test cases are properly linked and registered. Check for typos or mismatches in test declarations.
+<Tip>
+Running your tests with `--gmock_verbose=info` can help debug call expectations once you progress to writing mocks.
+</Tip>
+
+---
+
+## 4. Running Your First Mock Test
+
+Once your setup is validated, try running a simple mock test to confirm GoogleMock works.
+
+```cpp
+#include <gtest/gtest.h>
+#include <gmock/gmock.h>
+
+class MockFoo {
+ public:
+  MOCK_METHOD(int, GetValue, (), ());
+};
+
+using ::testing::Return;
+
+TEST(MockTest, ReturnsValue) {
+  MockFoo foo;
+  EXPECT_CALL(foo, GetValue())
+      .WillOnce(Return(42));
+
+  EXPECT_EQ(foo.GetValue(), 42);
+}
+
+int main(int argc, char** argv) {
+  ::testing::InitGoogleMock(&argc, argv);
+  return RUN_ALL_TESTS();
+}
+```
+
+Compile and link this with GoogleTest and GoogleMock libraries and run it. The test should pass, confirming your mock integration.
+
+---
+
+## 5. Troubleshooting Common Issues
+
+<AccordionGroup title="Troubleshooting Sample and Validation">
+<Accordion title="Headers Not Found">
+- Verify include paths in your build system.
+- Confirm GoogleTest and GoogleMock are installed or checked out correctly.
+- Use absolute or relative include paths carefully.
 </Accordion>
-<Accordion title="Unexpected Passes for Failing Setup">
-Verify that your setup function (`SetUpTestSuite`) uses fatal assertions (`ASSERT_*`) rather than non-fatal (`EXPECT_*`). Fatal assertions cause test abort and proper failure reporting.
+<Accordion title="Linker Errors">
+- Ensure you link against `gtest`, `gmock`, and their `*_main` variants if using provided main.
+- Verify library versions and architecture match your build.
+- Use verbose compiler and linker flags to inspect symbols.
 </Accordion>
-<Accordion title="Linker Errors Involving GoogleTest Symbols">
-Check your build configuration, ensure GoogleTest libraries are linked. Confirm compiler and linker flags for threading support (e.g., `-pthread`).
+<Accordion title="Test Binary Fails to Run or Crashes">
+- Confirm C++17 is enabled as required.
+- Check your environment variables and runtime library versions.
+- Run with verbosity flags for more output.
 </Accordion>
-<Accordion title="Missing or Outdated GoogleTest Binaries">
-Rebuild GoogleTest and your tests from scratch to avoid stale or incompatible artifacts.
+<Accordion title="Mock Function Calls Fail or Generate Warnings">
+- Ensure `EXPECT_CALL` are set before mock function invocation.
+- Use `NiceMock` to suppress uninteresting call warnings if necessary.
+- Check that mocked methods are virtual.
 </Accordion>
 </AccordionGroup>
 
-## 9. Next Steps
-
-After successful validation, proceed to write your own tests following the guide:
-
-- [Write and Run Your First Test](../../getting-started/configuration-first-run/write-first-test)
-- [Quick Start: Using GoogleMock](../../getting-started/configuration-first-run/quick-start-mocking)
-
-Enhance test suites by organizing fixtures aptly and leveraging advanced GoogleTest functionalities.
+<Tip>
+If persistent problems occur, check the [Common Issues and Troubleshooting](../../getting-started/troubleshooting-validation/common-issues.md) page.
+</Tip>
 
 ---
 
-## References & Further Reading
+## Next Steps
 
-- [SetUpTestSuite and TearDownTestSuite Lifetime Methods](reference/testing.md#Test::SetUpTestSuite)
-- [GoogleTest Primer](../../getting-started/configuration-first-run/write-first-test)
-- [Installation with CMake](../../getting-started/prerequisites-installation/installation-cmake)
-- [Installation with Bazel](../../getting-started/prerequisites-installation/installation-bazel)
-- [Assertions API](reference/core-testing-api/assertions-api)
+- After validating your setup, proceed to writing and running your first actual test in the [Writing and Running Your First Test](../configuration-first-run/write-first-test.md) guide.
+- Explore mocking basics to start using `EXPECT_CALL` and `ON_CALL` effectively.
+- For integrating into your build system, consult the [Configuring Your Project](../configuration-first-run/configure-project.md) page.
 
----
-
-For detailed conceptual understanding and testing techniques, consult the following documentation sections:
-
-- [Core Concepts and Terminology](../../overview/architecture-concepts/core-concepts)
-- [Integration with Development Ecosystem](../../overview/architecture-concepts/integration-points)
+<Check>
+Congratulations! Your GoogleTest and GoogleMock installation is now validated and ready for productive use.
+</Check>
 
 ---
 
-_Last updated: GoogleTest version `main` branch_
+## Additional References
+
+- [GoogleTest Primer](../../overview/product-intro-and-value/what-is-googletest.md)
+- [Mocking Basics Guide](../../guides/core-workflows/mocking-basics.md)
+- [Troubleshooting Common Issues](../../getting-started/troubleshooting-validation/common-issues.md)
+- [GoogleTest Architecture Overview](../../overview/architecture-and-concepts/architecture-overview.md)
 
 ---
+
+_This guide ensures you have a firm foundation and confidence that your testing framework works correctly before diving deeper into writing tests and mocks._
