--- a/guides/core-workflows/mocking-basics.mdx
+++ b/guides/core-workflows/mocking-basics.mdx
@@ -1,290 +1,334 @@
 ---
-title: "Mocking Functions and Objects"
-description: "Learn how to use GoogleMock to create mock classes, set expectations on functions, and define behaviors for dependencies when testing your code. This guide features realistic scenarios to cement practical mocking techniques."
+title: "Mocking Dependencies with GoogleMock"
+description: "Step-by-step guide to defining mock classes, setting up expectations, and verifying interactions using GoogleMock. Covers key macros, common usage patterns, and how to use mocks to isolate units under test."
 ---
 
-# Mocking Functions and Objects
+# Mocking Dependencies with GoogleMock
 
-## Workflow Overview
-
-### Task Description
-Learn how to create mock classes in GoogleMock, set expectations on mock functions, and control mock object behaviors during testing. This guide empowers you to mimic dependencies, isolate test scenarios, and verify interactions in your C++ code.
-
-### Prerequisites
-- Basic familiarity with C++ and virtual functions.
-- GoogleMock integrated into your project (`#include <gmock/gmock.h>`).
-- An interface or base class with virtual methods to mock.
-
-### Expected Outcome
-By completing this guide, you'll be able to:
-- Define mock classes using the `MOCK_METHOD` macro.
-- Set expectations on method calls with `EXPECT_CALL`.
-- Specify default behaviors with `ON_CALL`.
-- Handle complex mocking scenarios like const methods, overloaded methods, templated mocks, and uninteresting calls.
-
-### Time Estimate
-15-30 minutes for basic mock class creation and understanding expectations.
-
-### Difficulty Level
-Beginner to Intermediate
+This guide walks you through defining mock classes, setting expectations on mock methods, and verifying interactions using GoogleMock. You will learn key macros such as `MOCK_METHOD`, how to express common usage patterns, and effectively isolate units for testing by using mocks.
 
 ---
 
-## Step-by-Step Instructions
+## 1. Introduction
 
-### 1. Define a Mock Class
-Mock classes imitate real classes' interfaces for testing purposes.
+GoogleMock (gMock) enables you to create mock classes easily in C++ to simulate and verify dependencies of the units under test. This page focuses specifically on how to:
 
-- **Create a mock subclass** inheriting from the interface or base class.
-- In the `public:` section, use the `MOCK_METHOD` macro for each method you want to mock.
+- Define mock classes using `MOCK_METHOD` macros
+- Set expectations with `EXPECT_CALL`
+- Control mock behaviors with default actions (`ON_CALL`)
+- Verify interaction order, frequency, and argument matching
 
-#### Syntax Example
+By mastering these, you can isolate your tests from external dependencies and focus precisely on the interactions that matter.
+
+---
+
+## 2. Prerequisites
+
+Before starting:
+
+- Have a C++ project set up with GoogleTest and GoogleMock included
+- Include the GoogleMock header in your test files via `#include <gmock/gmock.h>`
+- Understand basic C++ class inheritance and virtual functions
+- Read the [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) for a beginner-friendly foundation
+
+
+---
+
+## 3. Defining Mock Classes
+
+Mock classes simulate interfaces or abstract classes your code interacts with. Use `MOCK_METHOD` macros inside a class deriving from the interface.
+
+### 3.1 Basic Syntax for MOCK_METHOD
+
 ```cpp
 class MockFoo : public Foo {
  public:
-  MOCK_METHOD(ReturnType, MethodName, (Args...), (Specs...));
+  // MOCK_METHOD(return_type, method_name, (argument_types), (optional_specs));
+  MOCK_METHOD(int, GetSize, (), (const, override));
+  MOCK_METHOD(void, DoSomething, (int value), (override));
 };
 ```
 
-#### Key Notes
-- Always add `MOCK_METHOD` in the `public:` section, regardless of base method's access level.
-- For `const` methods, add `(const)` in the specs.
-- Use `(override)` if overriding a virtual method.
+- Place `MOCK_METHOD` macros in the `public:` section, regardless of original method visibility
+- If the method is `const`, add `(const)` to the spec list
+- Add `(override)` for virtual overrides, recommended for clarity
 
-#### Handling Types with Commas
-If a return or argument type contains commas, wrap the type in parentheses or define an alias:
+
+### 3.2 Handling Commas in Types
+
+If your return or argument types contain commas (e.g. template types), surround the entire type with parentheses or use a type alias:
 
 ```cpp
-// Wrapping with parentheses
+// Using parentheses
 MOCK_METHOD((std::pair<bool, int>), GetPair, ());
 
 // Using type alias
-using BoolAndInt = std::pair<bool, int>;
-MOCK_METHOD(BoolAndInt, GetPair, ());
+using BoolInt = std::pair<bool, int>;
+MOCK_METHOD(BoolInt, GetPair, ());
 ```
 
-### 2. Set Default Behavior with ON_CALL
 
-Use `ON_CALL` to define what should happen when a function is called without setting an expectation (no verification of call count):
+### 3.3 Mocking Overloaded Methods
+
+Define all overloaded variants explicitly with correct signatures:
 
 ```cpp
-ON_CALL(mock_obj, MethodName(matchers...))
-    .WillByDefault(action);
+MOCK_METHOD(int, Add, (int x), (override));
+MOCK_METHOD(int, Add, (int times, int x), (override));
 ```
 
-- `ON_CALL` applies default behavior.
-- It's important to use `WillByDefault` exactly once per `ON_CALL`.
-- Use `ON_CALL` primarily for uninteresting calls or fallback behavior.
+If not mocking some overloads, bring others into scope with `using` to avoid hiding base class methods.
 
-Example:
+
+### 3.4 Mocking Class Templates
+
+Mock templates like any other classes:
+
 ```cpp
-ON_CALL(my_mock, GetValue()).WillByDefault(Return(42));
+template <typename T>
+class MockStack : public StackInterface<T> {
+ public:
+  MOCK_METHOD(int, GetSize, (), (const, override));
+  MOCK_METHOD(void, Push, (const T& x), (override));
+};
 ```
 
-### 3. Set Expectations with EXPECT_CALL
 
-`EXPECT_CALL` both defines behavior and verifies that the call happens as expected.
+### 3.5 Mocking Non-Virtual Methods
 
-Basic usage:
+More advanced use case where non-virtual methods are mocked without inheritance by providing matching methods in the mock class.
+
+
+---
+
+## 4. Setting Expectations on Mock Methods
+
+Expectations define which mock method calls you expect, with which arguments, how many times, and what behavior to exhibit.
+
+### 4.1 `EXPECT_CALL` Syntax
+
 ```cpp
-EXPECT_CALL(mock_obj, MethodName(matchers...))
+EXPECT_CALL(mock_object, Method(matchers...))
     .Times(cardinality)
     .WillOnce(action)
     .WillRepeatedly(action);
 ```
 
-- Match arguments explicitly or with matchers (e.g., `_` to match anything).
-- `Times()` clause controls expected invocation count (default inferred).
-- `WillOnce` and `WillRepeatedly` control returned values or side effects.
+- `mock_object`: instance of the mock
+- `Method`: mocked method name
+- `matchers`: argument matchers, or omit for any arguments (only if method is not overloaded)
+- Modifiers like `Times()`, `WillOnce()`, and `WillRepeatedly()` define invocation counts and behaviors
+
+
+### 4.2 Argument Matching
+
+- Use exact values: `EXPECT_CALL(foo, Bar(5))`
+- Use matchers when partial matching needed, e.g. `_` (anything), `Ge(5)` (>= 5), `NotNull()`, custom predicates
+
+
+### 4.3 Cardinalities With `Times()`
+
+Control expected number of calls:
+
+| Cardinality           | Meaning                                   |
+|----------------------|-------------------------------------------|
+| `Times(1)` (default) | Expect exactly 1 call                     |
+| `AnyNumber()`         | Any number of calls allowed               |
+| `AtLeast(n)`          | At least `n` calls                        |
+| `AtMost(n)`           | At most `n` calls                         |
+| `Between(m, n)`       | Between `m` and `n` calls inclusive      |
+| `Times(0)`            | The method must not be called             |
+
+
+### 4.4 Controlling Behavior: `WillOnce` and `WillRepeatedly`
+
+- `WillOnce(action)`: specifies action for a single call, can chain multiple in order
+- `WillRepeatedly(action)`: action for all calls after `WillOnce` actions
 
 Example:
+
 ```cpp
-EXPECT_CALL(turtle, Forward(100))
-    .Times(1);
+EXPECT_CALL(mock, GetValue())
+    .WillOnce(Return(1))
+    .WillOnce(Return(2))
+    .WillRepeatedly(Return(3));
 ```
 
-### 4. Handle Overloaded and Const Methods
 
-When mocking overloaded functions:
-- Mock each overload separately with appropriate `MOCK_METHOD`.
-- If not mocking all overloads, use `using BaseClass::MethodName;` to avoid hiding.
+### 4.5 Default Actions with `ON_CALL`
 
-For const methods, add `(const, override)` in `MOCK_METHOD` specs.
+Differentiate default behavior (`ON_CALL`) from expected calls (`EXPECT_CALL`):
 
-Example:
-```cpp
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(int, Add, (int x), (override));
-  MOCK_METHOD(int, Add, (int times, int x), (override));
-  MOCK_METHOD(int, GetValue, (), (const, override));
-};
-```
+- `ON_CALL(mock_object, Method(matchers...)).WillByDefault(action);` sets default behavior if no matching `EXPECT_CALL`
+- Use `ON_CALL` to provide default return values/behaviors without enforcing call expectations
 
-### 5. Use NiceMock, NaggyMock, and StrictMock for Uninteresting Calls
 
-These wrappers control how uninteresting calls (methods called with no matching `EXPECT_CALL`s) are handled:
+### 4.6 Chaining Clauses for Complex Expectations
 
-- **NiceMock<T>**: Suppresses warnings on uninteresting calls.
-- **NaggyMock<T>**: Prints warnings on uninteresting calls (default behavior).
-- **StrictMock<T>**: Treats uninteresting calls as errors.
+Following modifiers can be chained after `EXPECT_CALL` in order:
 
-Usage example:
-```cpp
-NiceMock<MockFoo> nice_mock;
-StrictMock<MockFoo> strict_mock;
-EXPECT_CALL(strict_mock, DoThis());
-```
+- `.With(multi_arg_matcher)`: entire set of arguments matched as a tuple
+- `.Times(cardinality)`: number of expected calls
+- `.InSequence(sequences...)`: impose call order
+- `.After(expectations...)`: call must occur after preceding expectations
+- `.WillOnce(action)`: action for first matching call
+- `.WillRepeatedly(action)`: action for all subsequent calls
+- `.RetiresOnSaturation()`: retire expectation after sufficient calls
 
-**Note:** Only use these with mock methods defined **directly** in `T` (not inherited). Nested modifiers are not supported.
 
-### 6. Manage Expectations Using Sequences and Ordering
+### 4.7 Ordering Calls
 
-If call order matters, use `InSequence` or `After` clauses:
+Use `InSequence` or `Sequence` to specify expected call order.
 
 ```cpp
 {
-  InSequence seq;
-  EXPECT_CALL(mock, FirstCall());
-  EXPECT_CALL(mock, SecondCall());
+  InSequence s;
+  EXPECT_CALL(mock, Start());
+  EXPECT_CALL(mock, Stop());
 }
 ```
 
-Or:
-```cpp
-Expectation e1 = EXPECT_CALL(mock, FirstCall());
-EXPECT_CALL(mock, SecondCall()).After(e1);
-```
-
-### 7. Verify and Reset Mock Expectations
-
-- Mocks automatically verify expectations on destruction.
-- Verify earlier using `Mock::VerifyAndClearExpectations(&mock_obj);`
-- To reset default actions too, use `Mock::VerifyAndClear(&mock_obj);`
-
-> Avoid setting new expectations after verification.
-
-### 8. Tips on Actions and Matchers
-
-- Use built-in matchers (e.g., `_`, `Eq()`, `Ge()`) to specify argument patterns.
-- Chain actions: `WillOnce(Return(x))`, `WillRepeatedly(Return(y))`.
-- For side effects like modifying an out parameter, use `SetArgPointee<N>(value)`.
-- To invoke a callable argument, use `InvokeArgument<N>(args...)`.
 
 ---
 
-## Examples
+## 5. Verifying Mocks
 
-### Defining a Simple Mock
+- gMock verifies that all expected calls were made when the mock object is destructed
+- You can explicitly verify and clear expectations early via:
+
 ```cpp
-class Foo {
- public:
-  virtual ~Foo() {}
-  virtual int GetValue() const = 0;
-  virtual void SetValue(int v) = 0;
-};
-
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(int, GetValue, (), (const, override));
-  MOCK_METHOD(void, SetValue, (int v), (override));
-};
+Mock::VerifyAndClearExpectations(&mock_object);
+Mock::VerifyAndClear(&mock_object);  // also clears default actions
 ```
 
-### Using NiceMock to Suppress Warnings
+- Avoid setting new expectations on a mock after verification to prevent undefined behavior
+
+---
+
+## 6. Examples
+
+### 6.1 Defining and Using a Mock Class
+
 ```cpp
-using ::testing::NiceMock;
+#include <gmock/gmock.h>
 
-TEST(MyTest, Example) {
-  NiceMock<MockFoo> mock_foo;
+class Turtle {
+ public:
+  virtual ~Turtle() {}
+  virtual void PenUp() = 0;
+  virtual void PenDown() = 0;
+  virtual void Forward(int distance) = 0;
+  virtual int GetX() const = 0;
+};
 
-  EXPECT_CALL(mock_foo, SetValue(10));
+class MockTurtle : public Turtle {
+ public:
+  MOCK_METHOD(void, PenUp, (), (override));
+  MOCK_METHOD(void, PenDown, (), (override));
+  MOCK_METHOD(void, Forward, (int distance), (override));
+  MOCK_METHOD(int, GetX, (), (const, override));
+};
 
-  mock_foo.SetValue(10);
-  mock_foo.GetValue();  // No warning even though no EXPECT_CALL.
+TEST(PainterTest, CanDrawLine) {
+  MockTurtle turtle;
+
+  EXPECT_CALL(turtle, PenDown()).Times(1);
+  EXPECT_CALL(turtle, Forward(100)).Times(1);
+
+  // Exercise code that uses turtle
+  // e.g. painter.DrawLine(&turtle);
 }
 ```
 
-### Setting Default Behavior with ON_CALL
+
+### 6.2 Setting Default Behavior with ON_CALL
+
 ```cpp
-ON_CALL(mock_foo, GetValue())
-    .WillByDefault(Return(42));
+ON_CALL(turtle, GetX()).WillByDefault(Return(0));
 ```
 
-### Setting Expectations with Complex Matchers
+
+### 6.3 Expecting Calls with Argument Matchers and Return Values
+
 ```cpp
-using ::testing::_, ::testing::Ge;
-EXPECT_CALL(mock_foo, SetValue(Ge(5)));
+EXPECT_CALL(mockService, ProcessData(Ge(10)))
+    .Times(AtLeast(1))
+    .WillRepeatedly(Return(true));
 ```
 
-### Mocking Overloads
-```cpp
-class Foo {
- public:
-  virtual int Add(int x) = 0;
-  virtual int Add(int x, int y) = 0;
-};
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(int, Add, (int x), (override));
-  MOCK_METHOD(int, Add, (int x, int y), (override));
-};
 
-// In test:
-EXPECT_CALL(mock_foo, Add(5));
-EXPECT_CALL(mock_foo, Add(3, 7));
+### 6.4 Sequence and Ordering
+
+```cpp
+Sequence s1, s2;
+EXPECT_CALL(mockA, Init()).InSequence(s1);
+EXPECT_CALL(mockB, Start()).InSequence(s1, s2);
+EXPECT_CALL(mockB, Stop()).InSequence(s2);
 ```
 
-### Delegating Calls to a Fake Object
-```cpp
-class FakeFoo : public Foo { ... };
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(int, Compute, (int x), (override));
-
-  void DelegateToFake() {
-    ON_CALL(*this, Compute).
-        WillByDefault([this](int x) { return fake_.Compute(x); });
-  }
-
- private:
-  FakeFoo fake_;
-};
-```
 
 ---
 
-## Troubleshooting & Tips
+## 7. Troubleshooting & Tips
 
-### Common Issues
+### 7.1 Common Issues
 
-- **Uninteresting call warnings:** If warnings about uninteresting calls annoy you, consider wrapping your mock with `NiceMock`.
-- **Unexpected calls failures:** Check your `EXPECT_CALL`s match the method calls correctly, including argument matchers.
-- **Overloaded method ambiguity:** Use `using BaseClass::Method` or specify all overloads.
-- **Mock methods not invoked:** Verify methods are `virtual`.
-- **Destructor not virtual:** Mock classes must have virtual destructors for proper cleanup.
+- **Uninteresting calls warnings**: Use `NiceMock` to suppress or add fallback `EXPECT_CALL(...).Times(AnyNumber())`
+- **Unexpected calls errors**: Verify if your test missed an expected call or arguments don't match
+- **Order mismatch**: If tests fail due to call order, use sequences or `.After()` to relax or force order
+- **Mock class doesn't intercept method calls**: Ensure mocked methods are virtual
 
-### Best Practices
+### 7.2 Best Practices
 
-- Use `ON_CALL` for default behaviors without expectations.
-- Use `EXPECT_CALL` to verify interactions.
-- Keep expectations minimal and focused.
-- Use sequences only when call order matters.
-- Avoid nesting `NiceMock`, `NaggyMock`, or `StrictMock`.
+- Always place `EXPECT_CALL` before exercising the code that exercises the mock
+- Limit `EXPECT_CALL`s to the interactions important for the test's intent
+- Use `ON_CALL` to set reasonable default behaviors and reduce brittle tests
+- Prefer `NiceMock` when uninteresting calls are not errors to reduce maintenance overhead
 
-### Advanced Considerations
+### 7.3 Performance Considerations
 
-- Mock move-only types with care, using lambdas for returning new objects.
-- Use `RetiresOnSaturation()` to make expectations retire once they are satisfied.
+- Move mock class constructor and destructor definitions to `.cc` files to speed compilation when mocking many methods
+
+### 7.4 Advanced Usage
+
+- Delegate to a fake or real object for mix of behavior and verification
+- Use `RetiresOnSaturation` to retire saturated expectations, especially in ordered call sequences
+
+---
+
+## 8. Next Steps & Related Content
+
+- Explore [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) for beginner tutorials
+- Use the [Matchers Reference](../matchers-actions/matchers-reference) to learn about argument matching
+- Learn advanced [Expectations and Cardinalities](../mocking/expectations) for flexible verification
+- Consult [Nice, Naggy and Strict mocks](../mocking/nice-strict-mocks) for controlling strictness and warnings
+- Progress to writing your first test with mocks using [Writing and Running Your First Test](../core-workflows/getting-started-tests)
 
 ---
 
-## Next Steps & Related Content
+## References
 
-- Explore [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) for recipes on advanced mocking patterns.
-- Study [Matchers Reference](reference/matchers.md) to craft powerful argument matchers.
-- Learn to write custom actions in [Actions API](api-reference/mock-actions-cardinalities/gmock-actions).
-- Understand mock strictness control in [Mock Strictness Control](api-reference/core-apis/gmock-nice-strict-api).
-- Begin with [Writing and Running Your First Test](guides/getting-started/writing-your-first-test) for foundational skills.
+- Official source and detailed API: [GoogleTest GitHub](https://github.com/google/googletest)
+- gMock Cookbook for advanced recipes: [gmock_cook_book.md](https://google.github.io/googletest/gmock_cook_book.html)
+- [Mock Method Macros Reference](../mocking/mock-methods)
+- [Setting Expectations & Cardinalities](../mocking/expectations)
 
 ---
+
+## Summary Diagram: Mocking Workflow
+
+```mermaid
+sequenceDiagram
+  participant Test as Test Code
+  participant Mock as Mock Object
+  participant CodeUnderTest as Code Under Test
+
+  Test->>Mock: Define MOCK_METHOD in Mock Class
+  Test->>Mock: Set ON_CALL(default behaviors)
+  Test->>Mock: Set EXPECT_CALL(expectations)
+  Test->>CodeUnderTest: Exercise code passing Mock
+  CodeUnderTest->>Mock: Invoke mocked methods
+  Mock-->>Test: Validate calls against expectations
+  Test->>Mock: VerifyAndClearExpectations (optional)
+```
+
